tests/flow_errors/connector_bad_with_param/error.txt
Error: 
    3 |   define connector foo from fake
    4 |   with
    5 |     preprocessor = ["snot"],
      |     ^^^^^^^^^^^^ Invalid `with` parameter "preprocessor" in definition of connector "foo".
      |                  NOTE: Available parameters are: codec, config, metrics_interval_s, postprocessors, preprocessors, reconnect, initial_commands
    6 |     config = {}
    7 |   end;